ci: three.js 开发入门与调试设置

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
     <title>Document</title>
     <link
       rel="stylesheet"
-      href="./index.css" />
+      href="../src/assets/index.css" />
   </head>
   <body>
     <script
-      src="./index.js"
+      src="../src/index.js"
       type="module"></script>
   </body>
 </html>
