ci: add example full_scroll

--- a/src/example/full_scroll/index.html
+++ b/src/example/full_scroll/index.html
@@ -11,7 +11,7 @@
     <title>Document</title>
     <link
       rel="stylesheet"
-      href="../src/assets/css/style.css" />
+      href="./style.css" />
   </head>
   <body>
     <div class="page page0">
@@ -31,7 +31,7 @@
       <h3>好看的星系出现了</h3>
     </div>
     <script
-      src="../src/index.js"
+      src="./index.js"
       type="module"></script>
   </body>
 </html>
