ci: add physics lib connon and how to use

--- a/public/index.html
+++ b/public/index.html
@@ -3,33 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta
-      http-equiv="X-UA-Compatible"
-      content="IE=edge" />
-    <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
       rel="stylesheet"
-      href="../src/assets/css/style.css" />
+      href="../src/assets/index.css" />
   </head>
   <body>
-    <div class="page page0">
-      <h1>老陈打码-Ray投射光线</h1>
-      <h3>THREE.Raycaster实现3d交互效果</h3>
-    </div>
-    <div class="page page1">
-      <h1>THREE.BufferGeometry！</h1>
-      <h3>应用打造酷炫的三角形</h3>
-    </div>
-    <div class="page page2">
-      <h1>活泼点光源</h1>
-      <h3>点光源围绕照亮小球</h3>
-    </div>
-    <div class="page page3">
-      <h1>星系</h1>
-      <h3>好看的星系出现了</h3>
-    </div>
     <script
       src="../src/index.js"
       type="module"></script>
